# rag-service

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
app/: main.py
app/api/: routes_chat.py  routes_feedback.py  routes_health.py  routes_ingest.py  routes_metrics.py  routes_search.py
app/core/: config.py  logging.py  metrics.py
app/eval/: metrics.py  run.py
app/rag/: chunking.py  embeddings.py  llm_client.py  prompt.py  qdrant_store.py  retrieval.py  streaming.py
data/eval/: golden.jsonl
docker/: Dockerfile
tests/: conftest.py  test_smoke.py
