[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "0.1.0"
description = "Production-grade RAG service with FastAPI, Qdrant, and OpenAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.40.0",
    "qdrant-client>=1.10.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "aiofiles>=23.2.1",
    "rich>=13.7.0",
]

[project.optional-dependencies]
# pip install -e ".[local]"  – CPU sentence-transformers (default provider)
local = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.4.0",
]

[project.scripts]
rag-eval = "app.eval.run:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
